--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Get draft release
         uses: cardinalby/git-get-release-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
          draft: true
 
