chore: update workflows

--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -24,18 +24,12 @@ jobs:
           registry-url: https://registry.npmjs.org/
 
       - name: Execute Release Drafter
+        id: release
         uses: release-drafter/release-drafter@v5
         with:
           disable-autolabeler: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Get draft release
-        uses: cardinalby/git-get-release-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-         draft: true
 
       - name: Parse version from release tag_name
         id: version
