--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -18,6 +18,9 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
 
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
+
       - name: Build
         run: yarn build
 
