--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
     "format": "prettier --write .",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
-    "typecheck": "npm run typecheck:node && npm run typecheck:web",
+    "typecheck": "yarn typecheck:node && yarn typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
-    "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:win": "npm run build && electron-builder --win --config",
-    "build:mac": "electron-vite build && electron-builder --mac --config",
-    "build:linux": "electron-vite build && electron-builder --linux --config",
-    "release": "electron-builder",
-    "lint": "eslint \"src/**/*.{js,mjs,cjs,ts,mts}\"",
-    "lint:fix": "eslint \"src/**/*.{js,mjs,cjs,ts,mts}\" --fix"
+    "build:web": "yarn typecheck && electron-vite build",
+    "build:win": "yarn build:web && electron-builder --win --config",
+    "build:mac": "yarn build:web && electron-builder --mac --config",
+    "build:linux": "yarn build:web && electron-builder --linux --config",
+    "lint": "eslint \"src/**/*.{js,mjs,cjs,ts,tsx,mts}\"",
+    "lint:fix": "eslint \"src/**/*.{js,mjs,cjs,ts,tsx,mts}\" --fix"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
